--- a/templates/template.html
+++ b/templates/template.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div class="container">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %} 
+          <ul id="messages" class="list-unstyled">
+          {% for category, message in messages %}
+              <li class="{{ category }}">{{ message }}</li>
+          {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}    
+
         <div class="page-header">
             <h1>{{ titulo }}</h1> 
         </div>
